# edgedetect

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetection/: MainActivity.java
app/src/main/java/com/example/edgedetection/gl/: GLRenderer.java  GLTextureView.java
app/src/main/java/com/example/edgedetection/jni/: OpenCVProcessor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
